--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
     sdk: flutter
   gdpr_dialog: ^2.1.1
   google_mobile_ads: ^3.0.0
-  http: ^1.1.0
+  http: any
   plugin_platform_interface: ^2.1.6
   shared_preferences: ^2.1.1
   shimmer: ^3.0.0
