--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,25 +7,25 @@ repository: https://github.com/Appyhigh/ad-sdk-flutter.git
 publish_to: "none"
 
 environment:
-  sdk: '>=2.18.1 <3.4.0'
+  sdk: ^3.6.0
 
 
 dependencies:
-  applovin_max: ^3.3.0
-  dart_jsonwebtoken: ^2.11.0
+  applovin_max: ^4.2.1
+  dart_jsonwebtoken: ^2.14.2
   flutter:
     sdk: flutter
-  google_mobile_ads: ^4.0.0
-  http: any
-  plugin_platform_interface: ^2.1.6
-  shared_preferences: ^2.1.1
+  google_mobile_ads: ^5.2.0
+  http: ^1.2.2
+  plugin_platform_interface: ^2.1.8
+  shared_preferences: ^2.3.5
   shimmer: ^3.0.0
-  url_launcher: ^6.1.14
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   plugin:
